# cli

./: README.md  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: main.yml
crates/crosstui_prompt/: Cargo.toml
crates/crosstui_prompt/src/: lib.rs  main.rs
crates/crosstui_prompt_demo/: Cargo.toml
crates/crosstui_prompt_demo/src/: main.rs
crates/neoncitylights/: Cargo.toml  README.md
crates/neoncitylights/src/: main.rs
crosstui_prompt/: all.html  fn.prompt.html  fn.prompt_yesno.html  index.html  sidebar-items.js
crosstui_prompt_demo/: all.html  fn.main.html  index.html
neoncitylights/: all.html  fn.cli.html  fn.help_template_subcommand.html  fn.main.html  fn.root_help_template.html  fn.subcommands.html  index.html  sidebar-items.js
search.desc/crosstui_prompt/: crosstui_prompt-desc-0-.js
search.desc/crosstui_prompt_demo/: crosstui_prompt_demo-desc-0-.js
search.desc/neoncitylights/: neoncitylights-desc-0-.js
src/crosstui_prompt/: lib.rs.html
src/crosstui_prompt_demo/: main.rs.html
src/neoncitylights/: main.rs.html
