[package]
name = "neoncitylights"
version = "0.1.0"
authors = [
	"Samantha Nguyen <contact@samanthanguyen.me>",
]
description = "A CLI tool by Neoncitylights to quickly create a new project"
repository = "https://github.com/neoncitylights/cli"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
# keywords = []
# categories = []
exclude = [
	"fuzz",
	"book",
	"benches",
]

[[bin]]
name = "neoncitylights"
path = "src/main.rs"

[dependencies]
color-print = "0.3.5"
crossterm = "0.27.0"
ratatui = "0.25.0"
spdx = "0.10.3"

[dependencies.clap]
version = "4.4.18"
features = [
	"cargo"
]
